fixed bug - footer covering main content

--- a/styles/index.css
+++ b/styles/index.css
@@ -93,3 +93,7 @@ footer div {
 .closeButton {
   margin-left: 95%;
 }
+
+main {
+  margin-bottom: 5lh;
+}
